# pyreco

./: LICENSE  README.rst  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
ctfr/: ctfr.py  datasets.py
ctfr/R/: ctfr_small.R
docs/: api.rst  conf.py  index.rst
pyreco/: basef.csv  pyreco.py
pyreco/R/: ctfr.R
tests/: conftest.py  test_ctfr.py  test_pyreco.py
