[tool.poetry]
name = "ctfr"
version = "0.1.0"
description = ""
authors = ["Noah Sayre <nsayre@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.1.4"
numpy = "^1.19.4"
scikit-hts = "^0.5.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"
mypy = "^0.790"
recommonmark = "^0.6.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
