[tool.poetry]
name = "pyreco"
version = "0.1.0"
description = ""
authors = ["Noah Sayre <noahsayre1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.1.4"
numpy = "^1.20.3"
scikit-hts = "^0.5.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
mypy = "^0.812"
isort = "^5.8.0"
recommonmark = "^0.7.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
